atlas_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-ms
  namespace: atlas-app
  labels:
    name: atlas-ms
spec:
  type: NodePort
  ports:
    - port: 8090
      targetPort: 8090
      name: msport1
    - port: 8091
      targetPort: 8091
      name: msport2
  selector:
    app: atlas-ms
