atlas_app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: atlas-ms
   namespace: atlas-app
   annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
   rules:
   - host: atlas.ms1
     http:
       paths:
       - path: /
         backend:
           serviceName: atlas-ms
           servicePort: 8090
   - host: atlas.ms2
     http:
       paths:
       - path: /
         backend:
           serviceName: atlas-ms
           servicePort: 8091
